# WYaS

./: .gitignore  README.md  WYaS.cabal  lispll.cabal
src/: Environment.hs  Evaluation.hs  Main.hs  Parser.hs  Primitives.hs  Types.hs  Utils.hs
test/: EvaluationTests.hs  Main.hs
