name:              lispll
version:           0.1
Build-Type:        Simple
cabal-version:     >= 1.2

executable lispll
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base, parsec, mtl

Test-Suite lispll-tests
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  hs-source-dirs:  test, src
  build-depends:   HUnit, Cabal
